--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,35 @@
 *{
     font-family: Roboto;
-    background-color: #E9FEEF;
 }
 
 .note{
-    margin: 20px;
+    margin: 10px;
     width: 400px;
-    height: 850px;
+    height: 500px;
     border: 3px solid #6162AD;
-    background-color: #F1E9FB ;
 }
-#app {
+
+.row {
     display: flex;
     justify-content: center;
 }
 
+.card {
+    margin: 10px;
+    padding: 10px;
+    border: 3px solid rgb(140, 140, 245);
+}
+
+.all-form-cards {
+    width: 400px;
+    height: 300px;
+    margin: 10px;
+    padding: 10px;
+    border: 3px solid rgb(140, 140, 245);
+}
+
+.from-cards{
+    display: flex;
+    justify-content: center;
+
+}
