--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,8 @@
     justify-content: center;
 }
 
-.card {
+
+.conc{
     margin: 10px;
     padding: 10px;
     border: 3px solid rgb(140, 140, 245);
